--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "prepublishOnly": "npm run build",
     "prettify": "prettier --write \"**/*.{ts,js}\"",
     "typecheck": "tsc --noEmit",
-    "cypress:open": "cypress open --config-file tests/cypress/cypress-config.js --e2e --browser chrome",
-    "cypress:run": "cypress run --config-file tests/cypress/cypress-config.js",
+    "cypress:open": "tests/cypress open --config-file tests/cypress/cypress-config.js --e2e --browser chrome",
+    "cypress:run": "tests/cypress run --config-file tests/cypress/cypress-config.js",
     "env": "wp-env",
     "env:start": "wp-env start",
     "env:stop": "wp-env stop",
@@ -45,7 +45,8 @@
   "homepage": "https://github.com/studioraz/cypress-magento-utlis",
   "devDependencies": {
     "@10up/cypress-wp-utils": "^0.1.0",
-    "@types/node": "^12.20.11",
+    "@types/cypress": "^1.1.3",
+    "@types/node": "^12.20.55",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "@wordpress/env": "^5.5.0",
@@ -53,6 +54,7 @@
     "compare-versions": "^4.1.3",
     "cypress": "^10.11.0",
     "cypress-mochawesome-reporter": "^3.2.3",
+    "cypress-xpath": "^2.0.1",
     "eslint": "^7.25.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-cypress": "^2.12.1",
