--- a/package.json
+++ b/package.json
@@ -7,21 +7,21 @@
     "lib/**/*"
   ],
   "scripts": {
-    "build": "tsc",
-    "dev": "tsc --watch",
-    "docs": "typedoc --out docs src/**/*.ts",
+    "build": "node_modules/.bin/tsc",
+    "dev": "node_modules/.bin/tsc --watch",
+    "docs": "node_modules/.bin/typedoc --out docs src/**/*.ts",
     "clean": "rm -rf ./lib/",
-    "coverage": "codecov",
-    "lint": "eslint ./src/ --fix",
-    "prepare": "husky install",
+    "coverage": "node_modules/.bin/codecov",
+    "lint": "node_modules/.bin/eslint ./src/ --fix",
+    "prepare": "node_modules/.bin/husky install",
     "prepublishOnly": "npm run build",
-    "prettify": "prettier --write \"**/*.{ts,js}\"",
-    "typecheck": "tsc --noEmit",
-    "cypress:open": "tests/cypress open --config-file tests/cypress/cypress-config.js --e2e --browser chrome",
-    "cypress:run": "tests/cypress run --config-file tests/cypress/cypress-config.js",
-    "env": "wp-env",
-    "env:start": "wp-env start",
-    "env:stop": "wp-env stop",
+    "prettify": "node_modules/.bin/prettier --write \\\\\\\"**/*.{ts,js}\\\\\\\"",
+    "typecheck": "node_modules/.bin/tsc --noEmit",
+    "cypress:open": "cypress open --config-file tests/cypress/cypress-config.js --e2e --browser chrome",
+    "cypress:run": "cypress run --config-file tests/cypress/cypress-config.js",
+    "env": "node_modules/.bin/wp-env",
+    "env:start": "node_modules/.bin/wp-env start",
+    "env:stop": "node_modules/.bin/wp-env stop",
     "postenv:start": "./tests/bin/initialize.sh"
   },
   "repository": {
@@ -52,7 +52,7 @@
     "@wordpress/env": "^5.5.0",
     "codecov": "^3.8.1",
     "compare-versions": "^4.1.3",
-    "cypress": "^10.11.0",
+    "cypress": "^12.17.1",
     "cypress-mochawesome-reporter": "^3.2.3",
     "cypress-xpath": "^2.0.1",
     "eslint": "^7.25.0",
