Change project structure, realized functions for Cart Page

--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "prepublishOnly": "npm run build",
     "prettify": "node_modules/.bin/prettier --write \\\\\\\"**/*.{ts,js}\\\\\\\"",
     "typecheck": "node_modules/.bin/tsc --noEmit",
-    "cypress:open": "cypress open --config-file tests/cypress/cypress-config.js --e2e --browser chrome",
-    "cypress:run": "cypress run --config-file tests/cypress/cypress-config.js",
+    "cypress:open": "tests/cypress open --config-file tests/cypress/cypress-config.js --e2e --browser chrome",
+    "cypress:run": "tests/cypress run --config-file tests/cypress/cypress-config.js",
     "env": "node_modules/.bin/wp-env",
     "env:start": "node_modules/.bin/wp-env start",
     "env:stop": "node_modules/.bin/wp-env stop",
