--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,16 +16,7 @@
     "skipLibCheck": false,                           /* Skip type checking of declaration files. */
     "forceConsistentCasingInFileNames": true,        /* Disallow inconsistently-cased references to the same file. */
 
-    "types": ["node", "cypress"],
+    "types": ["node", "cypress"]
   },
-  "include": ["**/**/*.ts",
-    "**/*.ts",
-    "cypress/support/commands/customer/login.ts",
-    "cypress/support/commands/customer/logout.ts",
-    "cypress/support/commands/**/*.ts"],
-
-  "files": [
-    "./cypress/support/commands/customer/login.ts",
-    "./cypress/support/commands/customer/logout.ts"
-  ]
+  "include": ["src/**/*.*"]
 }
